--- a/src/styles/controls.less
+++ b/src/styles/controls.less
@@ -31,3 +31,10 @@
   color: @color-white;
   font-family: hogwartsRegular;
 }
+
+.btn-info, .btn-info:hover, .btn-info:active, .btn-info:visited {
+  background-color: @color-white;
+  border: 1px solid @color-primary-normal-1;
+  color: @color-primary-normal-1;
+  font-family: hogwartsRegular;
+}
