update student statuses without page reload

--- a/src/app/pages/student/status/student-status.page.html
+++ b/src/app/pages/student/status/student-status.page.html
@@ -159,7 +159,7 @@
         [previousStatus]="currentStudentStatus.status"
         [newStatus]="newStudentStatus"
         [hasAction]="hasAction(newStudentStatus)"
-        (statusSaved)="onStatusSaved()">
+        (statusSaved)="onStatusSaved($event)">
       </app-student-status-modal>
     </div>
 
