--- a/src/app/pages/student/status/student-status.page.html
+++ b/src/app/pages/student/status/student-status.page.html
@@ -70,11 +70,11 @@
               Бесплатное занятие проведено
             </button>
 
-            <button class="btn btn-default" (click)="setNewStudentStatus('TEST_ASSIGNED')" data-toggle="modal" data-target="#studentStatus">
+            <button class="btn btn-info" (click)="setNewStudentStatus('FREE_LESSON_ASSIGNED')" data-toggle="modal" data-target="#studentStatus">
               Бесплатное занятие перенесено
             </button>
 
-            <button class="btn btn-default" (click)="setNewStudentStatus('LEFT')" data-toggle="modal" data-target="#studentStatus">
+            <button class="btn btn-info" (click)="setNewStudentStatus('LEFT')" data-toggle="modal" data-target="#studentStatus">
               Студент отказался от бесплатного занятия
             </button>
           </div>
@@ -84,7 +84,7 @@
               Временно приостановил
             </button>
 
-            <button class="btn btn-default" (click)="setNewStudentStatus('LEFT')" data-toggle="modal" data-target="#studentStatus">
+            <button class="btn btn-info" (click)="setNewStudentStatus('LEFT')" data-toggle="modal" data-target="#studentStatus">
               Покинул
             </button>
           </div>
@@ -94,7 +94,7 @@
               Возобновил занятия
             </button>
 
-            <button class="btn btn-default" (click)="setNewStudentStatus('LEFT')" data-toggle="modal" data-target="#studentStatus">
+            <button class="btn btn-info" (click)="setNewStudentStatus('LEFT')" data-toggle="modal" data-target="#studentStatus">
               Покинул
             </button>
           </div>
