fix student status icon

--- a/src/app/parts/field-validation-sign/field-validation-sign.component.html
+++ b/src/app/parts/field-validation-sign/field-validation-sign.component.html
@@ -1,2 +1,2 @@
-<i *ngIf="!valid" class="fa fa-exclamation-circle horizontal-item field-invalid" aria-hidden="true"></i>
-<i *ngIf="valid" class="fa fa-check-circle horizontal-item field-valid" aria-hidden="true"></i>
+<i *ngIf="!valid" class="fa fa-exclamation-circle field-invalid" aria-hidden="true"></i>
+<i *ngIf="valid" class="fa fa-check-circle field-valid" aria-hidden="true"></i>
