--- a/src/app/pages/student/menu/student-menu.component.html
+++ b/src/app/pages/student/menu/student-menu.component.html
@@ -9,7 +9,7 @@
      [class.page-left-menu-item-active]="currentTab === 'STATUS'"
      [class.page-left-menu-item-inactive]="currentTab !== 'STATUS'"
      (click)="navigateTo('status')">
-  <i class="fa fa-users menu-item-icon" aria-hidden="true"></i>
+  <i class="fa fa-road menu-item-icon" aria-hidden="true"></i>
   <span class="horizontal-item">Статус</span>
 </div>
 
