--- a/src/app/pages/students-list/students-list.page.html
+++ b/src/app/pages/students-list/students-list.page.html
@@ -49,13 +49,14 @@
         {{getAgeTranslationAsGroup(student.age)}}
       </div>
       <div class="list-row-item student-status-column">
+        <!-- ToDo -->
         <div
           [class.student-status-label-request]="student.statusType == 'REQUEST'"
-          [class.student-status-label-test-assigned]="student.statusType == 'TEST_ASSIGNED'"
-          [class.student-status-label-free-lesson-assigned]="student.statusType == 'FREE_LESSON_ASSIGNED'"
-          [class.student-status-label-group-assigned]="student.statusType == 'GROUP_ASSIGNED'"
-          [class.student-status-label-temporarily-stopped]="student.statusType == 'TEMPORARILY_STOPPED'"
-          [class.student-status-label-left]="student.statusType == 'LEFT'">
+          [class.student-status-label-test-assigned]="student.statusType == 'TEST'"
+          [class.student-status-label-free-lesson-assigned]="student.statusType == 'FREE_LESSON'"
+          [class.student-status-label-group-assigned]="student.statusType == 'STUDYING'"
+          [class.student-status-label-temporarily-stopped]="student.statusType == 'AWAITING_GROUP'"
+          [class.student-status-label-left]="student.statusType == 'STUDYING_LEFT'">
           {{getStudentStatusTypeTranslation(student.statusType)}}
         </div>
       </div>
