--- a/src/app/controls/form-text-input-control/form-text-input.control.html
+++ b/src/app/controls/form-text-input-control/form-text-input.control.html
@@ -7,4 +7,5 @@
 <input id="{{name}}" name="{{name}}" class="form-control"
        required minlength="1"
        [value]="value"
+       [disabled]="!editable"
        (keyup)="onValueChange($event.target.value)"/>
