--- a/src/app/parts/student/student-status/student-status.component.less
+++ b/src/app/parts/student/student-status/student-status.component.less
@@ -1,11 +1,4 @@
-.student-status-label {
-  padding: 5px 10px;
-  border-radius: 5px;
-  line-height: 20px;
-  margin-top: 10px;
-  margin-right: 20px;
-  text-align: center;
-}
+@import '../../../../styles.less';
 
 .student-status-label-request {
   .student-status-label;
