--- a/src/styles.less
+++ b/src/styles.less
@@ -12,6 +12,10 @@
   padding: 0 !important;
 }
 
+.no-margin {
+  margin: 0 !important;
+}
+
 .pull-right {
   float: right;
 }
@@ -80,11 +84,11 @@
 .link {
   .clickable;
 
-  color: @color-primary-normal-1;
+  color: @color-primary-light-1 !important;
 }
 
 .link:hover {
-  color: @color-primary-normal-2;
+  color: @color-primary-light-2 !important;
 }
 
 .link:hover {
