--- a/src/app/pages/group/information/group-information.page.html
+++ b/src/app/pages/group/information/group-information.page.html
@@ -31,7 +31,7 @@
           </div>
 
           <div class="form-group">
-            <label for="manager">Мэнеджер:</label>
+            <label for="manager">Старший преподаватель:</label>
             <select id="manager" class="form-control" name="manager" [(ngModel)]="group.managerId">
               <option *ngFor="let teacher of getTeachers()" value="{{teacher.id}}">
                 {{teacher.name}}
