--- a/src/app/parts/student/student-status-modal/student-status.modal.html
+++ b/src/app/parts/student/student-status-modal/student-status.modal.html
@@ -11,9 +11,9 @@
            [name]="'actionTime'"
            [label]="'Время'"
            [valid]="true"
-           [value]="actionTime"
+           [valueString]="actionTime"
            [items]="actionTimeItems"
-           (onChange)="actionTime = $event"></div>
+           (onChangeString)="actionTime = $event"></div>
     </form>
   </div>
 
