--- a/src/app/controls/form-select-control/form-select.control.html
+++ b/src/app/controls/form-select-control/form-select.control.html
@@ -4,7 +4,7 @@
   {{label}}:
 </label>
 <select id="status" class="form-control" name="status" (change)="onValueChange($event.target.value)">
-  <option *ngFor="let item of items" value="{{item.value}}" [attr.selected]="value === item.value ? 'selected' : null">
-    {{item.name}}
+  <option *ngFor="let item of getItems()" value="{{item.value}}" [attr.selected]="getValue() === item.value ? 'selected' : null">
+    {{item.name === null ? (item.value | translate) : item.name}}
   </option>
 </select>
