--- a/src/app/pages/event/information/event-information.page.html
+++ b/src/app/pages/event/information/event-information.page.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
 
   <div class="page-elements">
-    <div class="page-left-menu"></div>
+    <div class="page-left-menu" app-event-menu [eventId]="event?.id" [currentTab]="'INFORMATION'"></div>
 
     <div class="page-content-with-footer">
       <div *ngIf="loadingInProgress" class="page-loading">
